[package]
name = "async-change-tracker"
description = "reactive change notifications using futures"
version = "0.3.2"
authors = ["Andrew Straw <strawman@astraw.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-change-tracker/"
repository = "https://github.com/astraw/async-change-tracker"
keywords = ["futures", "reactive", "notify", "change", "watch"]
categories = ["asynchronous", "data-structures"]
edition = "2018"

[dependencies]
log = "0.4"
futures = "0.3.1"

[dev-dependencies]
futures = { version = "0.3.1", features = ["thread-pool"] }
